--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,45 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+django = "^5.1.4"
 
+
+[tool.poetry.group.dev.dependencies]
+psycopg2-binary = "^2.9.10"
+ipython = "^8.31.0"
+pillow = "^11.0.0"
+python-dotenv = "^1.0.1"
+
+
+[tool.poetry.group.lint.dependencies]
+isort = "^5.13.2"
+mypy = "^1.14.0"
+flake8 = "^7.1.1"
+black = "^24.10.0"
+
+[tool.black]
+line-length = 119
+exclude = '''
+(
+  /(
+    | \.git
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | dist
+  )/
+)
+'''
+
+[tool.mypy]
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = true
+exclude = '.venv'
+
+[tool.isort]
+line_length = 119
 
 [build-system]
 requires = ["poetry-core"]
