--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ ipython = "^8.31.0"
 pillow = "^11.0.0"
 python-dotenv = "^1.0.1"
 django-apscheduler = "^0.7.0"
+colorlog = "^6.9.0"
 
 
 [tool.poetry.group.lint.dependencies]
